[gd_scene load_steps=2 format=3 uid="uid://dvlpr4m0dt5rw"]

[ext_resource type="Script" uid="uid://byocq6a3u36ox" path="res://scenes/menus/options/components/volume_slider.gd" id="1_o184v"]

[node name="VolumeSlider" type="HSlider"]
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -30.0
max_value = 0.0
script = ExtResource("1_o184v")

[connection signal="value_changed" from="." to="." method="_on_value_changed"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
